--- a/css/style.scss
+++ b/css/style.scss
@@ -29,11 +29,11 @@ body {
 ////////////////////////////////////////////////////
 ///////////////////
 body {
-  background-image: url(../img/bg_001.jpg);
+  background-image: url(../img/bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   font-size: 1.6rem;
-  font-family: Robot, sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 .wrapper {
