--- a/css/style.css
+++ b/css/style.css
@@ -7,27 +7,27 @@
           box-sizing: inherit;
 }
 
+:root {
+  --primary-color: rgba(13, 110, 139, 0.4);
+  --overlay-color: rgba(24, 39, 51, 0.85);
+}
+
 html {
-  font-size: 62.5%;
+  font-size: 0.5vw;
   scroll-behavior: smooth;
 }
 
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-body {
-  background-image: url(../img/bg.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  font-size: 1.6rem;
+  background: url("../img/bg.jpg") no-repeat center fixed;
+  background-size: auto;
   font-family: Roboto, sans-serif;
-  height: auto;
 }
 
 .wrapper {
-  min-height: 100vh;
+  min-height: 90vh;
+  height: auto;
 }
 
 .header {
@@ -44,8 +44,8 @@ body {
 }
 
 .header__logo {
-  height: 20rem;
-  width: 25vw;
+  min-height: 17vh;
+  width: 30vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -55,14 +55,15 @@ body {
 }
 
 .header__logo-img {
-  width: 27.84rem;
-  height: 10.95rem;
+  width: 50%;
+  height: auto;
 }
 
 .header__nav {
-  padding-left: 5rem;
-  height: 20rem;
-  width: 40vw;
+  padding-left: 1vw;
+  font-size: 0.5vw;
+  min-height: 17vh;
+  width: 30vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,45 +85,45 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 1.5rem;
 }
 
 .header__nav-item {
+  font-size: 1.5rem;
   height: 2rem;
   width: auto;
   list-style: none;
   text-transform: uppercase;
   color: white;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .header__nav-item:hover {
   opacity: 0.8;
 }
 
+/* container for the text and phones imgs*/
 .content-view {
-  min-height: 80vh;
+  margin: 0 auto;
+  min-height: 65vh;
+  max-width: 70vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
 .imgs-wrapper {
-  height: 75vh;
-  width: 40vw;
+  height: 60vh;
+  width: 45vw;
   position: relative;
 }
 
 .imgs-wrapper__img-1 {
   position: absolute;
-  top: 3%;
-  left: 13%;
+  top: 1em;
+  left: 8em;
   z-index: 1;
   max-height: 59.2rem;
   max-width: 28.8rem;
@@ -133,7 +134,7 @@ body {
 .imgs-wrapper__img-2 {
   position: absolute;
   top: 0;
-  right: 32%;
+  right: 26em;
   z-index: auto;
   max-height: 59.2rem;
   max-width: 28.8rem;
@@ -142,8 +143,10 @@ body {
 }
 
 .text-wrapper {
-  height: 50vh;
-  width: 25vw;
+  padding: 5vw 0;
+  padding-left: 5vw;
+  height: 60vh;
+  width: 40vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -158,14 +161,14 @@ body {
 
 .text-wrapper__header {
   font-size: 4rem;
-  font-weight: 600;
-  line-height: 1.6;
+  font-weight: 500;
+  line-height: 1.4;
 }
 
 .text-wrapper__sub-header {
   line-height: 1.5;
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 500;
 }
 
 .buttons-wrapper {
@@ -174,8 +177,12 @@ body {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  width: 70%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 80%;
   font-weight: 600;
+  font-size: 1.6rem;
 }
 
 .buttons-wrapper__btn-learn {
@@ -188,10 +195,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 15rem;
+  width: 10vw;
   height: 5rem;
   color: white;
-  background-color: green;
+  background-color: #4bbf58;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -210,15 +217,25 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 15rem;
+  width: 10vw;
   height: 5rem;
   color: white;
-  background-color: teal;
+  background-color: #3397db;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .buttons-wrapper__btn-get:hover {
   opacity: 0.8;
+}
+
+@media only screen and (max-width: 1000px) {
+  html {
+    font-size: 0.6vw;
+  }
+  .header,
+  .content-view {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
