--- a/css/style.css
+++ b/css/style.css
@@ -230,9 +230,153 @@ body {
 }
 
 @media only screen and (max-width: 1200px) {
-  .header,
-  .content-view {
+  .content-view,
+  .header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header__logo {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .header__logo-img {
+    width: 50vw;
+    height: auto;
+  }
+  .header__nav {
     display: none;
+  }
+  .imgs-wrapper {
+    margin: 0 auto;
+    height: 60vh;
+    width: 50%;
+    position: relative;
+  }
+  .imgs-wrapper__img-1 {
+    position: absolute;
+    top: 1em;
+    left: 8em;
+    z-index: 1;
+    max-height: 59.2rem;
+    max-width: 28.8rem;
+    width: 100%;
+    height: auto;
+  }
+  .imgs-wrapper__img-2 {
+    position: absolute;
+    top: 0;
+    right: 26em;
+    z-index: auto;
+    max-height: 59.2rem;
+    max-width: 28.8rem;
+    width: 100%;
+    height: auto;
+  }
+  .content-view {
+    margin: 0 auto;
+    min-height: 65vh;
+    max-width: 60vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .text-wrapper {
+    height: 100;
+    width: 40vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    color: white;
+  }
+  .text-wrapper__header {
+    font-size: 6em;
+    font-weight: 500;
+    line-height: 1.4;
+  }
+  .text-wrapper__sub-header {
+    line-height: 1.5;
+    font-size: 3em;
+    font-weight: 500;
+  }
+  .buttons-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-weight: 600;
+    font-size: 2rem;
+  }
+  .buttons-wrapper__btn-learn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 10vw;
+    height: 5rem;
+    color: white;
+    background-color: #4bbf58;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .buttons-wrapper__btn-learn:hover {
+    opacity: 0.8;
+  }
+  .buttons-wrapper__btn-get {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 10vw;
+    height: 5rem;
+    color: white;
+    background-color: #3397db;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .buttons-wrapper__btn-get:hover {
+    opacity: 0.8;
   }
 }
 /*# sourceMappingURL=style.css.map */
