--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,11 @@ body {
 }
 
 .wrapper {
-  min-height: 100vh;
-  height: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  min-height: 100vh;
+  height: auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -56,11 +56,12 @@ body {
 }
 
 .header__logo {
-  height: auto;
-  width: 23vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-preferred-size: 23vw;
+      flex-basis: 23vw;
+  height: auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -72,12 +73,13 @@ body {
 }
 
 .header__nav {
-  padding-left: 1vw;
-  height: auto;
-  width: 25vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-preferred-size: 25vw;
+      flex-basis: 25vw;
+  height: auto;
+  padding-left: 1vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -87,41 +89,49 @@ body {
 }
 
 .header__nav-list {
-  cursor: pointer;
-  width: 25vw;
-  height: 5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 5rem;
+  -ms-flex-preferred-size: 25vw;
+      flex-basis: 25vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  cursor: pointer;
 }
 
 .header__nav-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 2rem;
+  -ms-flex-preferred-size: auto;
+      flex-basis: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 0.8vw;
-  height: 2rem;
-  width: auto;
   list-style: none;
   text-transform: uppercase;
-  color: white;
+  font-size: 0.8vw;
   font-weight: 500;
+  color: #fff;
+  -webkit-transition: all, 0.2s ease;
+  transition: all, 0.2s ease;
 }
 
 .header__nav-item:hover {
   opacity: 0.8;
+}
+
+.header__hamburger {
+  display: none;
 }
 
 /* container for the text and phones imgs*/
@@ -138,16 +148,16 @@ body {
 }
 
 .imgs-wrapper {
-  font-size: 0.5vw;
-  height: auto;
-  width: 25vw;
   position: relative;
+  font-size: 0.5vw;
+  width: 25vw;
+  height: auto;
 }
 
 .imgs-wrapper__img-1 {
   position: absolute;
   top: 1em;
-  left: 3vw;
+  left: 3.2vw;
   z-index: 1;
   max-height: 59.2vh;
   max-width: 14.8vw;
@@ -158,7 +168,7 @@ body {
 .imgs-wrapper__img-2 {
   position: absolute;
   top: 0;
-  right: 0em;
+  right: 0;
   z-index: auto;
   max-height: 59.2vh;
   max-width: 14.8vw;
@@ -167,12 +177,13 @@ body {
 }
 
 .text-wrapper {
-  padding: 3vw 0;
-  height: 50vh;
-  width: 23vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-preferred-size: 23vw;
+      flex-basis: 23vw;
+  height: 50vh;
+  padding: 3vw 0;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -192,39 +203,42 @@ body {
 .text-wrapper__sub-header {
   width: 22vw;
   height: auto;
-  line-height: 1.5;
   font-size: 0.75vw;
   font-weight: 500;
+  line-height: 1.5;
 }
 
 .buttons-wrapper {
-  width: 19vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 19vw;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-weight: 600;
   font-size: 1vw;
+  font-weight: 600;
 }
 
 .buttons-wrapper__btn-learn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-preferred-size: 9vw;
+      flex-basis: 9vw;
+  height: 5vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 9vw;
-  height: 5vh;
-  color: white;
   background-color: #4bbf58;
+  color: #fff;
   border-radius: 4px;
   cursor: pointer;
+  -webkit-transition: all, 0.2s ease;
+  transition: all, 0.2s ease;
 }
 
 .buttons-wrapper__btn-learn:hover {
@@ -241,96 +255,37 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 9vw;
+  -ms-flex-preferred-size: 9vw;
+      flex-basis: 9vw;
   height: 5vh;
-  color: white;
   background-color: #3397db;
+  color: #fff;
   border-radius: 4px;
   cursor: pointer;
+  -webkit-transition: all, 0.2s ease;
+  transition: all, 0.2s ease;
 }
 
 .buttons-wrapper__btn-get:hover {
   opacity: 0.8;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1300px) {
   .content-view {
     display: none;
   }
-  .header {
-    min-height: 20vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .header__logo {
-    min-height: 17vh;
-    width: 30vw;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .header__logo-img {
-    width: 13vw;
-    height: auto;
-  }
+}
+
+@media only screen and (max-width: 800px) {
+  .content-view,
   .header__nav {
-    padding-left: 1vw;
-    font-size: 0.5vw;
-    border: 1px solid yellowgreen;
-    min-height: 17vh;
-    width: 30vw;
+    display: none;
+  }
+  .header__hamburger {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .header__nav-list {
-    cursor: pointer;
-    width: 25vw;
-    height: 5rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  .header__nav-item {
-    font-size: 2rem;
-    height: 2rem;
-    width: auto;
-    list-style: none;
-    text-transform: uppercase;
     color: white;
-    font-weight: 500;
-  }
-  .header__nav-item:hover {
-    opacity: 0.8;
   }
 }
 /*# sourceMappingURL=main.css.map */
