--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
 @import "./base";
 
-@import "./layout";
-
 @import "./header";
 @import "./content-view";
+@import "./layout";
 
+@import "./hamburger";
 @import "./media-queries";
