--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 }
 
 :root {
-  --primary-color: rgba(13, 110, 139, 0.4);
+  --primary-color: rgba(13, 110, 139, 0.1);
   --overlay-color: rgba(24, 39, 51, 0.85);
 }
 
@@ -23,21 +23,6 @@ body {
   background: url("../img/bg.jpg") no-repeat center fixed;
   background-size: cover;
   font-family: Roboto, sans-serif;
-}
-
-.wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 100vh;
-  height: auto;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
 }
 
 .header {
@@ -131,6 +116,7 @@ body {
 }
 
 .header__hamburger {
+  border: 1px solid red;
   display: none;
 }
 
@@ -138,6 +124,7 @@ body {
 .content-view {
   margin: 0 auto;
   min-height: 65vh;
+  height: auto;
   min-width: 70vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -149,15 +136,14 @@ body {
 
 .imgs-wrapper {
   position: relative;
-  font-size: 0.5vw;
   width: 25vw;
   height: auto;
 }
 
 .imgs-wrapper__img-1 {
   position: absolute;
-  top: 1em;
-  left: 3.2vw;
+  top: 1vh;
+  left: 3vh;
   z-index: 1;
   max-height: 59.2vh;
   max-width: 14.8vw;
@@ -168,7 +154,7 @@ body {
 .imgs-wrapper__img-2 {
   position: absolute;
   top: 0;
-  right: 0;
+  right: 3vh;
   z-index: auto;
   max-height: 59.2vh;
   max-width: 14.8vw;
@@ -270,22 +256,289 @@ body {
   opacity: 0.8;
 }
 
-@media only screen and (max-width: 1300px) {
-  .content-view {
-    display: none;
-  }
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  height: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-@media only screen and (max-width: 800px) {
-  .content-view,
-  .header__nav {
-    display: none;
-  }
-  .header__hamburger {
+.header__hamburger {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  border: 1px solid black;
+}
+
+.toggler {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  cursor: pointer;
+  width: 5rem;
+  height: 5rem;
+  opacity: 0;
+}
+
+.hamburger {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 6rem;
+  height: 6rem;
+  padding: 1rem;
+  background: var(--primary-color);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/* Hamburguer line */
+.hamburger > div {
+  position: relative;
+  width: 100%;
+  height: 2px;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+/* top and botton lines*/
+.hamburger > div:before,
+.hamburger > div:after {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  top: -10px;
+  width: 100%;
+  height: 2px;
+  background: inherit;
+}
+
+/* moves line down */
+.hamburger > div:after {
+  top: 10px;
+}
+
+.toggler:checked + .hamburger > div {
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+}
+
+.toggler:checked + .hamburger > div:before,
+.toggler:checked + .hamburger > div:after {
+  top: 0;
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+/* rotate when it's hover and checked */
+.toggler:checked:hover + .hamburger > div {
+  -webkit-transform: rotate(225deg);
+          transform: rotate(225deg);
+}
+
+.toggler:checked ~ .menu {
+  visibility: visible;
+}
+
+.toggler:checked ~ .menu > div {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
+.toggler:checked ~ .menu > div > div {
+  opacity: 1;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu > div {
+  background-color: var(--overlay-color);
+  border-radius: 50%;
+  width: 200vw;
+  height: 200vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+.menu > div > div {
+  text-align: center;
+  max-width: 90vw;
+  max-height: 100vh;
+  opacity: 0;
+  -webkit-transition: opacity 0.4s ease;
+  transition: opacity 0.4s ease;
+}
+
+.menu > div > div > ul > li {
+  list-style: none;
+  color: white;
+  font-size: 2rem;
+  padding: 1.6rem;
+}
+
+.menu > div > div > ul > li > a {
+  color: inherit;
+  text-decoration: none;
+  -webkit-transition: color 0.4s ease;
+  transition: color 0.4s ease;
+}
+
+@media only screen and (max-width: 500px) {
+  .wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    color: white;
+    width: 100vw;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header {
+    min-height: 15vh;
+  }
+  .header__logo-img {
+    width: 50vw;
+    height: auto;
+  }
+  .header__nav {
+    /* hide the horizontal navigation for mobiles */
+    display: none;
+  }
+  .header__hamburger {
+    /* display hamburger menu for mobiles */
+    display: block;
+  }
+  .content-view {
+    height: 100%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .imgs-wrapper {
+    min-height: 45vh;
+    width: 65vw;
+  }
+  .imgs-wrapper__img-1 {
+    max-height: 140.21vh;
+    max-width: 35.52vw;
+    top: 2vh;
+  }
+  .imgs-wrapper__img-2 {
+    max-height: 140.21vh;
+    max-width: 35.52vw;
+    top: 1vh;
+  }
+  .text-wrapper {
+    width: 70vw;
+    min-height: 39vh;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .text-wrapper__header {
+    width: 65vw;
+    font-size: 6vw;
+    font-weight: 500;
+    line-height: 1.4;
+    text-align: center;
+  }
+  .text-wrapper__sub-header {
+    width: 65vw;
+    height: auto;
+    font-size: 3.1vw;
+    font-weight: 500;
+    line-height: 1.5;
+    text-align: center;
+  }
+  .text-wrapper .buttons-wrapper {
+    width: 60vw;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    font-size: 2vw;
+    font-weight: 600;
+  }
+  .text-wrapper .buttons-wrapper__btn-learn {
+    -ms-flex-preferred-size: 22vw;
+        flex-basis: 22vw;
+    font-size: 3vw;
+  }
+  .text-wrapper .buttons-wrapper__btn-get {
+    -ms-flex-preferred-size: 22vw;
+        flex-basis: 22vw;
+    font-size: 3vw;
   }
 }
 /*# sourceMappingURL=main.css.map */
