--- a/css/main.css
+++ b/css/main.css
@@ -116,7 +116,6 @@ body {
 }
 
 .header__hamburger {
-  border: 1px solid red;
   display: none;
 }
 
@@ -273,16 +272,15 @@ body {
 
 .header__hamburger {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 1vh;
+  right: 1vh;
   z-index: 2;
-  border: 1px solid black;
 }
 
 .toggler {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1vh;
+  right: 1vh;
   z-index: 3;
   cursor: pointer;
   width: 5rem;
@@ -292,8 +290,8 @@ body {
 
 .hamburger {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1vh;
+  right: 1vh;
   z-index: 2;
   width: 6rem;
   height: 6rem;
@@ -457,10 +455,14 @@ body {
             align-items: center;
   }
   .header {
-    min-height: 15vh;
+    min-height: 16vh;
+    min-width: 85vw;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .header__logo-img {
-    width: 50vw;
+    width: 36vw;
     height: auto;
   }
   .header__nav {
